we are developing dark mode feature

--- a/views/markdown/es2021.md
+++ b/views/markdown/es2021.md
@@ -1,5 +1,6 @@
 ---
 title: ES2021 Example
+description: ES2021 New Features Example
 ---
 
 # Logical Assignment Operators
@@ -42,7 +43,7 @@ x.name ??= y // -> something
 
 # New Built-In String Function
 ```js
-let x = "DC is a company that makes action films. The DC that made the Iron Man character"
-let newxbutold = x.replace("DC", "Marvel") // -> Marvel is a company that makes action films. DC made Iron Man character
-let newx = x.replaceAll("DC", "Marvel") // -> Marvel is a company that makes action films. The Marvel made the Iron Man character
+let x = "Julie is a persistent person. Julie likes butterflies"
+let newxbutold = x.replace("Julie", "Alice") // -> Alice is a good person. Julie likes butterflies
+let newx = x.replaceAll("Julie", "Alice") // -> Alice is a good person. Alice likes butterflies
 ```
